cloud/k3s/backend/reverse/wetty-lo/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetty-lo
  labels:
    app: wetty-lo
    component: deployment
spec:
  selector:
    matchLabels:
      app: wetty-lo
  template:
    metadata:
      labels:
        app: wetty-lo
        component: workload
    spec:
      containers:
      - image: ghcr.io/jobscale/reverse-proxy
        name: wetty-lo
---
apiVersion: v1
kind: Service
metadata:
  name: wetty-lo
  labels:
    app: wetty-lo
    component: service
spec:
  selector:
    app: wetty-lo
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wetty-lo
  labels:
    name: wetty-lo
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - secret'
spec:
  ingressClassName: nginx
  tls:
  - secretName: jsxjp-tls
    hosts: [ "wetty.jsx.jp", "wetty.x.jsx.jp" ]
  rules:
  - host: wetty.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wetty-lo
            port:
              number: 80
  - host: wetty.x.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wetty-lo
            port:
              number: 80
